chore(starters): cleanup

--- a/starters/next-starter-typescript/pages/[...slug].mdx
+++ b/starters/next-starter-typescript/pages/[...slug].mdx
@@ -3,62 +3,4 @@ type: notype
 title: Catch All Pages
 ---
 
-{/* import { useSSG } from 'nextra/ssg' */}
-import { useRouter } from 'next/router'
-
-export async function getStaticPaths() {
-  return {
-  paths: [
-    { params: { slug: ['asdf'] } },
-  ],
-    fallback: true
-  }
-}
-
-export const getStaticProps = ({ params }) => {
-  return {
-    props: {
-      // We return an `ssg` object in the props.
-      ssg: {
-        generated_at: new Date().toISOString() + ' (ZH)'
-      }
-    },
-    revalidate: 5
-  }
-}
-
-export const DateRenderer = () => {
-  // And later we can get it inside MDX.
-  // const ssg = useSSG()
-  return <strong>generated_at{ /* ssg?.generated_at */ }</strong>
-}
-
-# The date is "<DateRenderer/>"
-
-export const TagName = () => {
-  const { tag } = useRouter().query
-  return tag || null
-}
-
-# Posts Tagged with “<TagName/>”
-
-
-# GFM
-
-## Autolink literals
-
-www.example.com, https://example.com, and contact@example.com.
-
-## Strikethrough
-
-~one~ or ~~two~~ tildes.
-
-## Table
-
-| a | b  |  c |  d  |
-| - | :- | -: | :-: |
-
-## Tasklist
-
-* [ ] to do
-* [x] done
+# Catch All Pages
