chore(starters/next-starter-typescript): use optional catch all routes

--- a/starters/next-starter-typescript/pages/[[...slug]].mdx
+++ b/starters/next-starter-typescript/pages/[[...slug]].mdx
@@ -1,8 +1,14 @@
-import type { NextPage } from 'next'
+---
+type: notype
+title: Catch All Pages
+---
+
 import { View } from '@gspenst/components'
 
-const IndexPage: NextPage = () => {
+export const IndexPage = () => {
   return <View css={{ color: 'red' }}>@gspenst/next-starter-typescript</View>
 }
 
-export default IndexPage
+# Catch All Pages
+
+<IndexPage />
