--- a/starters/starter-typescript/content/posts/anotherPost.mdx
+++ b/starters/starter-typescript/content/posts/anotherPost.mdx
@@ -1,5 +1,5 @@
 ---
-title: Just Another Blog Post
+title: Just Another Blog Postdsfsdfererw
 excerpt: >
   Lorem markdownum evinctus ut cape adhaeret gravis licet progenies ut haesit maxima ille. Est scorpius, mori vel in visaeque Haemoniis viperei furoris e ad vasti, distulit. Crudus sub coniuge iam: dea propera sive
 
@@ -8,12 +8,6 @@ date: '2021-07-12T07:00:00.000Z'
 ---
 
 # Vote For Pedro
-
-sdf
-
-```
-asdfasdf
-```
 
 Hello, the current date and time is \<DateTime format="iso"/>. Quis semper [vulputate](https://example.com) aliquam venenatdis egestas sagittis quisque orci. Donec commodo sdit viverra aliquam porttitor ultrices gravida eu. Tincidunt leo, elementum mattis elementum ut nisl, justo, amet, mattis. Nunc purus, diam cdommodo tincidunt turpis. Amet, duis sed elit interdum dignissim
 
