--- a/starters/starter-typescript/content/posts/anotherPost.mdx
+++ b/starters/starter-typescript/content/posts/anotherPost.mdx
@@ -7,34 +7,12 @@ author: content/authors/napolean.md
 date: '2021-07-12T07:00:00.000Z'
 ---
 
-# Vote For Pedro
+# ljksdf
 
-Hello, the current date and time is \<DateTime format="iso"/>. Quis semper [vulputate](https://example.com) aliquam venenatdis egestas sagittis quisque orci. Donec commodo sdit viverra aliquam porttitor ultrices gravida eu. Tincidunt leo, elementum mattis elementum ut nisl, justo, amet, mattis. Nunc purus, diam cdommodo tincidunt turpis. Amet, duis sed elit interdum dignissim
+sdf
 
-![](http://res.cloudinary.com/deuzrsg3m/image/upload/v1634858384/tina-upload_yxevty.jpg)
+<BlockQuote children="dfg" authorName="sdf" />
 
----
+## sfsdfsdf
 
-```
-css
-```
-
-> Id orci tellus laoreet id ac. Dolor, aenean leo, ac etiam consequat in. Convallis arcu ipsum urna nibh. Pha
->
-> retra, euismod vitae interdum mauris enim, consequat vulputate nibh. Maecenas pellentesque id sed tellus mauris, ultrices mauris. Tincidunt enim cursus ridiculus mi. Pellentesque nam sed nullam sed diam turpis ipsum eu a sed convallis diam.
-
-![This is an image](http://res.cloudinary.com/deuzrsg3m/image/upload/v1631389967/apfx/kevin-bosc-oeqBJZd1GWY-unsplash_rtuyot.jpg 'Building, by Thomas Carlisle')
-
-Quis semper [vulputate](https://example.com) aliquam venenatdis egestas sagittis quisque orci. Donec commodo sit viverra aliquam porttitor ultrices gravida eu. Tincidunt leo, elementum mattis elementum ut nisl, justo, amet, mattis. Nunc purus, diam cdommodo tincidunt turpis. Amet, duis sed elit interdum dignissim
-
-### 3 Reasons to vote for Pedro
-
-- Anim aute id magna aliqua ad ad non deserunt sunt
-- Qui irure qui Lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat.
-- Lorem markdownum evinctus ut cape adhaeret gravis licet progenies ut haesit maxima ille. Est scorpius, mori vel in visaeque Haemoniis viperei furoris e ad vasti, distulit. Crudus sub coniuge iam: dea propera sive?
-
-### 3 More Reasons to vote for Pedro
-
-1.  Anim aute id magna aliqua ad ad non deserunt sunt
-2.  Qui irure qui Lorem cupidatat commodo. . Elit sunt amet fugiat veniam occaecat fugiat.
-3.  Lorem markdownum evinctus ut cape adhaeret gravis licet progenies ut haesit maxima ille. Est scorpius, mori vel in visaeque Haemoniis viperei furoris e ad vasti, distulit. Crudus sub coniuge iam: dea propera sive?
+sdfsdfsdf
