feat(theme-minimal): Add markdown renderer

--- a/starters/starter-typescript/content/posts/anotherPost.mdx
+++ b/starters/starter-typescript/content/posts/anotherPost.mdx
@@ -1,17 +1,13 @@
 ---
-title: Just Another Blog Postdsfsdfererw
-excerpt: >
-  Lorem markdownum evinctus ut cape adhaeret gravis licet progenies ut haesit maxima ille. Est scorpius, mori vel in visaeque Haemoniis viperei furoris e ad vasti, distulit. Crudus sub coniuge iam: dea propera sive
-
+title: ''
+excerpt: ''
 author: content/authors/napolean.md
 date: '2021-07-12T07:00:00.000Z'
 ---
 
-# ljksdf
+# This is the page title
 
-sdf
-
-<BlockQuote children="dfg" authorName="sdf" />
+sdfsdfsdf
 
 ## sfsdfsdf
 
