feat(next): add tag collection

--- a/starters/minimal-starter/content/posts/7th-post.mdx
+++ b/starters/minimal-starter/content/posts/7th-post.mdx
@@ -4,4 +4,10 @@ author: content/authors/pedro.md
 date: '2021-07-03T20:30:00.000Z'
 excerpt: >-
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Praesent elementum facilisis leo vel fringilla est ullamcorper eget. At imperdiet dui accumsan sit amet nulla facilities morbi tempus.
+tags:
+  - tag: content/tags/tag-1.md
+  - tag: content/tags/tag-2.md
+authors:
+  - author: content/authors/napolean.md
+  - author: content/authors/pedro.md
 ---
