chore(minimal-starter): update content

--- a/starters/minimal-starter/content/posts/6th-post.mdx
+++ b/starters/minimal-starter/content/posts/6th-post.mdx
@@ -3,6 +3,7 @@ title: Sixth Post
 excerpt: ''
 author: content/authors/napolean.md
 date: '2021-07-12T07:00:00.000Z'
+slug: 6th-post
 ---
 
 # This is the page title
