feat(gspenst): make use of tinacms filters to batchload data

--- a/playground/minimal-starter/content/pages/home.mdx
+++ b/playground/minimal-starter/content/pages/home.mdx
@@ -1,7 +1,8 @@
 ---
-title: 'Home'
-slug: home
 date: '2021-07-03T20:30:00.000Z'
+slug: home
+title: Home
+excerpt: asdfsdf
 ---
 
 # Heading 1
@@ -42,4 +43,4 @@ console.log('Hello World')
 
 _Italic_
 
-[`text`](www.google.at 'Link Title')
+[`text`](www.google.at)
